<resources>
    <string name="menu_settings">Settings</string>
    <string name="system_application_name">MaGDAA - MEM</string>
    <string name="system_application_default_label">MaGDAA - MEM</string>
    <string name="launcher_ui_lbl_header">Mobile Environment Monitoring</string>
    <string name="launcher_ui_lbl_about_start">This application is designed to interface with the MaGDAA sensor module to collect temperature and humidity readings. Before continuing ensure:\n\n</string>
    <string name="launcher_ui_lbl_step_01">You have a MaGDAA sensor module\n</string>
    <string name="launcher_ui_lbl_step_02">The sensor module is connected via a cable, or via bluetooth, to this device\n</string>
    <string name="launcher_ui_lbl_step_03">If using bluetooth ensure the sensor module and device is paired\n</string>
    <string name="launcher_ui_lbl_step_04">Use the \'Preferences\' button below to adjust any necessary settings\n</string>
    <string name="launcher_ui_lbl_about_finish">\nUse the \'Start\' below to start reading values from the sensor module and sharing them across the Serval Mesh network</string>
    <string name="launcher_ui_btn_settings">Preferences</string>
    <string name="launcher_ui_btn_start">Start</string>
    <string name="launcher_ui_btn_start_continue">Continue</string>
    <string name="launcher_ui_btn_contact">Email MaGDAA</string>
    <string name="launcher_ui_dialog_no_external_storage_message">External storage, such as an SD Card, must be enabled before using this application</string>
    <string name="launcher_ui_dialog_no_external_storage_title">External Storage</string>
    <string name="launcher_ui_dialog_no_serval_mesh_message">The Serval Mesh software is not installed, please install it before using this application</string>
    <string name="launcher_ui_dialog_no_serval_mesh_title">Serval Mesh</string>
    <string name="launcher_menu_acknowledgements">Acknowledgements</string>
    <string name="readings_ui_lbl_header">Sensor Readings</string>
    <string name="readings_ui_lbl_sensor_status">Sensor Status: </string>
    <string name="readings_ui_lbl_sensor_status_default">Sensor Status: Connecting&#8230;</string>
    <string name="readings_ui_lbl_sensor_status_connected">Connected</string>
    <string name="readings_ui_lbl_sensor_status_disconnected">Disconnected</string>
    <string name="readings_ui_lbl_temperature">Temperature</string>
    <string name="readings_ui_lbl_temperature_img">A Thermometer</string>
    <string name="readings_ui_lbl_humidity">Relative Humidity</string>
    <string name="readings_ui_lbl_humidity_img">A Weather Icon</string>
    <string name="readings_ui_lbl_reading_time">Reading Time: %s</string>
    <string name="readings_ui_lbl_temperature_value_celsius">%.1f ºC</string>
    <string name="readings_ui_lbl_temperature_value_fahrenheit">%.1f ºF</string>
    <string name="readings_ui_lbl_temperature_value_kelvin">%.1f ºK</string>
    <string name="readings_ui_lbl_humidity_value">%.1f%%</string>
    <string name="readings_ui_toast_serval_not_running">The Serval Mesh is not running, data sharing is not occuring</string>
    <string name="readings_ui_lbl_temperature_default_celsius">- ºC</string>
    <string name="readings_ui_lbl_temperature_default_fahrenheit">- ºF</string>
    <string name="readings_ui_lbl_temperature_default_kelvin">- ºK</string>
    <string name="readings_ui_lbl_humidity_default">- %</string>
    <string name="readings_ui_lbl_reading_time_default">Waiting for next reading&#8230;</string>
    <string name="readings_ui_btn_stop">Stop Collection</string>
    <string name="readings_ui_btn_stop_restart">Restart Collection</string>
    <string name="readings_ui_btn_charts">View Chart</string>
    <string name="readings_ui_dialog_charts_title">Pick a Chart</string>
    <string name="chart_temperature_ui_lbl_header">Temperature Past Hour</string>
    <string name="chart_temperature_ui_chart_title">Temperature</string>
    <string name="chart_temperature_ui_chart_series_title">Temperature in º%s</string>
    <string name="chart_temperature_ui_chart_domain_label">Time</string>
    <string name="chart_humidity_ui_lbl_header">Relative Humidity Past Hour</string>
    <string name="chart_humidity_ui_chart_title">Relative Humidity</string>
    <string name="chart_humidity_ui_chart_series_label">Humidity</string>
    <string name="chart_humidity_ui_chart_domain_label">Time</string>
    <string name="chart_ui_toast_no_data">There is insufficient data to display a chart at this time, please try again later</string>
    <string name="instance_writer_rhizome_share_failed">The attempt to share file via Rhizome\'$1%s\' failed. Check the error log for details.</string>
    <string name="preferences_display_title">Display Preferences</string>
    <string name="preferences_sensor_readings_title">Sensor Reading Preferences</string>
    <string name="preferences_display_temperature_title">Temperature Units</string>
    <string name="preferences_display_temperature_description">Temperature is displayed in %s</string>
    <string name="preferences_display_temperature_default">c</string>
    <string name="preferences_display_max_cold_temp_title">Maxmimum Cold Temp</string>
    <string name="preferences_display_max_cold_temp_description">The maximum cold temperature is %sºC</string>
    <string name="preferences_display_max_cold_temp_dialog">The maximum cold temperature in ºC</string>
    <string name="preferences_display_max_cold_temp_default">20</string>
    <string name="preferences_display_min_hot_temp_title">Minimum Hot Temp</string>
    <string name="preferences_display_min_hot_temp_description">The minimum hot temperature is %sºC</string>
    <string name="preferences_display_min_hot_temp_dialog">The minimum hot temperature in ºC</string>
    <string name="preferences_display_min_hot_temp_default">30</string>
    <string name="preferences_collection_interval_title">Collection Interval</string>
    <string name="preferences_collection_interval_summary_a">The interval between collections is 30 seconds</string>
    <string name="preferences_collection_interval_summary_b">The interval between collections is 1 minute</string>
    <string name="preferences_collection_interval_summary_c">The interval between collections is %s minutes</string>
    <string name="preferences_collection_interval_description">The interval between collecting a sensor reading</string>
    <string name="preferences_collection_interval_default">60000</string>
    <string name="preferences_dialog_invalid_temperature_message">The entered temperature value is invalid</string>
    <string name="preferences_dialog_invalid_temperature_title">Invalid Temperature</string>
    <string name="preferences_collection_location_title">Collect Geographic Location</string>
    <string name="preferences_collection_location_description">Collect geographic location information with a sensor reading</string>
    <string name="preferences_collection_location_gps_title">Use GPS Location</string>
    <string name="preferences_collection_location_gps_description">Use geographic location information from GPS</string>
    <string name="preferences_collection_location_manual_title">Use Manual Location</string>
    <string name="preferences_collection_location_manual_description">Use manually entered geographic location information</string>
    <string name="preferences_collection_location_manual_lat_title">Manual Latitude Geocoordinate</string>
    <string name="preferences_collection_location_manual_lat_description">A Latitude Geocoordinate in decimal degrees</string>
    <string name="preferences_collection_location_manual_lat_dialog">Latitude coordinate in decimal degrees</string>
    <string name="preferences_collection_location_manual_lng_title">Manual Longitude Geocoordinate</string>
    <string name="preferences_collection_location_manual_lng_description">A Longitude Geocoordinate in decimal degrees</string>
    <string name="preferences_collection_location_manual_lng_dialog">Longitude coordinate in decimal degrees</string>
    <string name="preferences_collection_location_manual_invalid">The geocoordinate was invalid and has not been saved</string>
    <string name="preferences_dialog_invalid_manual_location_coords_message">The manual Geocoordinates are invalid, please adjust the values before continuing</string>
    <string name="preferences_dialog_invalid_manual_location_coords_title">Invalid Geocoordinates</string>
    <string name="preferences_dialog_invalid_gps_status_message">GPS Location Services must be enabled to use GPS locations. Enable GPS Location Services now?</string>
    <string name="preferences_dialog_invalid_gps_status_title">GPS Location Services</string>
    <string name="system_notification_ticker_text">MaGDAA MEM recording has started</string>
    <string name="system_notification_title">MaGDAA MEM</string>
    <string name="system_notification_content">MaGDAA MEM is running and recording sensor readings</string>
    <string name="system_content_provider_label">MaGDAA MEM Sensor Readings</string>
    <string name="system_content_provider_description">A datastore of all of the MaGDAA MEM Sensor Readings</string>
    <string name="system_content_provider_authority">org.magdaaproject.mem.provider.items</string>
    <string name="system_content_provider_permission_read_label">Read MaGDAA MEM Sensor Readings</string>
    <string name="system_content_provider_permission_read_description">Read MaGDAA MEM Sensor Readings such as Temperature and Humidity</string>
    <string name="system_content_provider_permission_write_label">Write MaGDAA MEM Sensor Readings</string>
    <string name="system_content_provider_permission_write_description">Write MaGDAA MEM Sensor Readings such as Temperature and Humidity</string>
    <string name="system_broadcast_intent_new_reading_action">org.magdaaproject.mem.NEW_READING</string>
    <string name="system_broadcast_intent_sensor_status_action">org.magdaaproject.mem.SENSOR_STATUS</string>
    <string name="system_broadcast_intent_sensor_status_inquiry_action">org.magdaaproject.mem.SENSOR_STATUS_INQUIRY</string>
    <string name="system_broadcast_intent_sensor_reading_permission_label">MaGDAA MEM New Reading</string>
    <string name="system_broadcast_intent_sensor_reading_permission_description">Receive Notification of MaGDAA MEM New Reading</string>
    <string name="system_broadcast_intent_sensor_status_permission_label">MaGDAA MEM Sensor Status</string>
    <string name="system_broadcast_intent_sensor_status_permission_description">Receive Notification of MaGDAA MEM Sensor Status</string>
    <string name="system_broadcast_intent_sensor_status_connected">Connected</string>
    <string name="system_broadcast_intent_sensor_status_disconnected">Disconnected</string>
    <string name="system_magdaa_permission_group_label">MaGDAA MEM Permissions</string>
    <string name="system_magdaa_permission_group_description">Permissions related to actions that can be undertaken with the MaGDAA MEM software</string>
    <string name="system_file_path_parent">/magdaaproject/</string>
    <string name="system_file_path_debug_output">/magdaaproject/debug/</string>
    <string name="system_file_path_rhizome_data">/magdaaproject/rhizome/mem/</string>
    <string name="system_file_path_odk_instances">/odk/instances/</string>
    <string name="system_xforms_form_name">MaGGDA MEM</string>
    <string name="ui_elem_bullet_span">15</string>
    <string name="system_contact_email">admin@magdaaproject.org</string>
    <string name="system_contact_email_subject">Feedback on the MaGDAA MEM application</string>
    <string name="system_contact_email_chooser">Send feedback email&#8230;</string>
    <string name="system_contact_email_no_app">A default email client could not be found, please send any feedback you may have to %1$s</string>
</resources>