<!--
/*
 * Copyright (C) 2012 The MaGDAA Project
 *
 * This file is part of the MaGDAA MEM Software
 *
 * MaGDAA MEM Software is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 3 of the License, or
 * (at your option) any later version.
 *
 * This source code is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this source code; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 */
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <!-- header -->
    <TextView
       android:id="@+id/readings_ui_lbl_header"
       style="@style/ui_elem_header"
       android:text="@string/readings_ui_lbl_header" />
    
    <!-- sensor status -->
    <TextView
       android:id="@+id/readings_ui_lbl_sensor_status"
       style="@style/ui_elem_sub_header_2"
       android:text="@string/readings_ui_lbl_sensor_status_default" />
    
    <!-- start temperature -->
    <TextView
       android:id="@+id/readings_ui_lbl_temperature"
       style="@style/ui_elem_sub_header_1"
       android:text="@string/readings_ui_lbl_temperature" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView
	       android:id="@+id/readings_ui_lbl_temperature_value"
	       style="@style/ui_elem_reading" />

        <ImageView
            android:id="@+id/readings_ui_lbl_temperature_img"
            style="@style/ui_elem_reading_img"
            android:layout_gravity="bottom|center_vertical"
            android:contentDescription="@string/readings_ui_lbl_temperature_img"/>
        
    </LinearLayout>
    
    <!-- start humidity -->
    <TextView
       android:id="@+id/readings_ui_lbl_humidity"
       style="@style/ui_elem_sub_header_1"
       android:text="@string/readings_ui_lbl_humidity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView
	       android:id="@+id/readings_ui_lbl_humidity_value"
	       style="@style/ui_elem_reading" />

        <ImageView
            android:id="@+id/readings_ui_lbl_humidity_img"
            style="@style/ui_elem_reading_img"
            android:layout_gravity="bottom|center_vertical"
            android:contentDescription="@string/readings_ui_lbl_humidity_img" />
        
    </LinearLayout>
    
    <!-- start reading time -->
    <TextView
       android:id="@+id/readings_ui_lbl_reading_time"
       style="@style/ui_elem_sub_header_2" />

</LinearLayout>